<resources>
    <string name="app_name">parcial2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="cedula">Cedula</string>
    <string name="nombre">Nombre</string>
    <string name="estrato">Estrato</string>
    <string name="salario">Salario</string>
    <string name="Neducativo">Nivel Educativo</string>
    <string name="registrar">REGISTRAR</string>
    <string name="listado">LISTADO</string>
    <string name="buscar">BUSCAR</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
