<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    app:layout_behavior="@string/appbar_scrolling_view_behavior" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="755dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abril_fatface"
                android:text="@string/cedula"
                android:textColor="#000000"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/ced"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abril_fatface"
                android:text="@string/nombre"
                android:textColor="#000000"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abril_fatface"
                android:text="@string/estrato"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Spinner
                android:id="@+id/spinnerEstrato"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="32dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="93dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abril_fatface"
                android:text="@string/salario"
                android:textColor="#000000"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/sal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abril_fatface"
                android:text="@string/Neducativo"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Spinner
                android:id="@+id/spinnerNAacade"
                android:layout_width="250dp"
                android:layout_height="38dp"
                android:layout_marginVertical="32dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="93dp" />

            <Button
                android:id="@+id/btnguardar"
                android:layout_width="278dp"
                android:layout_height="wrap_content"
                android:text="@string/registrar"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnlistado"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/listado" />

            <Button
                android:id="@+id/btnbuscar"
                android:layout_width="278dp"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/buscar" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
